Fix action sheet text visibility - set proper CSS variables
- Add --van-notify-text-color: #323233 to :root (dark gray)
- Add --van-action-sheet-item-text-color: #323233
- Add --van-action-sheet-subname-color: #969799
- Remove incorrect --van-notify-text-color from App.vue scoped styles
- Simplify notification color overrides to use direct color values
- Fixes white-on-white text issue in action sheet

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,9 @@
   -moz-osx-font-smoothing: grayscale;
 
   --van-toast-text-color: black;
+  --van-notify-text-color: #323233;
+  --van-action-sheet-item-text-color: #323233;
+  --van-action-sheet-subname-color: #969799;
 }
 
 html {
